--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>首页</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no" />
+    <!-- 禁止纯数字按钮点击就拨号 -->
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="apple-touch-fullscreen" content="YES" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="stylesheet" type="text/css" href="//s.thsi.cn/cb?/css/m/;adblock.css" />
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
-    <title>xxx</title>
+    <script type="text/javascript" src="//s.thsi.cn/js/m/kh/common/scripts/autoFontSize.min.js"></script>
 </head>
 <body>
     <p>hello world! I love you!</p>
     <img src="./images/avatar.png" alt="">
-    <script src="./scripts/index.js"></script>
+    <script type="text/javascript" src="//s.thsi.cn/js/m/js/zepto.min.js"></script>
+    <script type="text/javascript" src="//s.thsi.cn/cb?js/m/business/;stat.js;share.js;js/m/common/;basic.js;user.js;cookie.js;bridge.js;js/m/kh/common/scripts/encrypt/;rsa.min.js;encrypt.min.js;js/m/kh/common/scripts/clientAgreement/;openOrDownload.min.js&20170912"></script>
+    <script type="text/javascript" src="./scripts/index.js"></script>
 </body>
 </html>
