加入一些公共化组件

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="./styles/index.css" />
     <title>xxx</title>
+    <script src="./scripts/eruda.min.js"></script>
+    <script>eruda.init();</script>
 </head>
 <body>
     <p>hello world! I love you!</p>
